# SWDB_2025_Connectomics

./: .gitignore  README.md  pyproject.toml
.Trash-0/files/: Exercises1.ipynb
.Trash-0/info/: Exercise1-solutions.ipynb.trashinfo  Exercises1.ipynb.trashinfo
.codeocean/: datasets.json  environment.json
code/: Workshop1.ipynb  run
code/data_extraction/: 2Ppreprocessing.ipynb  DataProducts.ipynb
code/exercises/: Exercise1.ipynb  Exercise2.ipynb  Exercise3.ipynb
code/solutions/: 2Ppreprocessing.ipynb  DataProducts.ipynb  Exercise1-solutions.ipynb  Exercise2 - Solutions.ipynb  Exercise2.ipynb  Exercise3 - Solutions.ipynb  Exercises1.ipynb  Workshop1 - Solutions.ipynb  Workshop1.ipynb  Workshop2 - Solutions.ipynb  Workshop2.ipynb
code/utils/: data_io.py  matrix_plotting.py
code/workshops/: 2025_09_02_functional_metrics.ipynb  Workshop1.ipynb  Workshop2.ipynb
environment/: Dockerfile
