[project]
name = "swdb-2025-connectomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "caveclient>=7.11.0",
    "seaborn>=0.13.2",
    "skeleton-plot",
    "standard-transform>=1.4.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
jupyter = [
    "ipykernel>=6.30.0",
]

[tool.uv.sources]
skeleton-plot = { git = "https://github.com/AllenInstitute/skeleton_plot.git" }
